Cascading Change Log

unreleased

  Fixed c.t.TupleEntry#set method so that it may take a c.t.Fields instance for a field name.

  Fixed NPE in c.t.TempHfs when parent c.f.Flow is used in a Cascade under certain conditions.

  Fixed bug where mixed absolute and relative paths didn't not result in a proper topological sort when used
  in a c.c.Cascade.

  Fixed bug where a c.c.Cascading of c.f.Flow and c.f.MapReduceFlow instances did not properly sort topologically.

  Added c.c.Cascade#writeDOT method to simplify debugging Cascade instances.

1.1.2

  Fixed bug preventing c.s.TextDelimited schemes from being used with a c.t.TemplateTap.

  Updated c.t.Scheme base class to force Field.ALL source declaration to Fields.UNKNOWN, and to force Fields.UNKNOWN
  sink declaration to Fields.ALL.

  Fixed bug where if null was passed to c.s.TextLine sinkCompression, the behavior would be undefined.

  Added back c.t.Tuple#add( Comparable ) to remain backwards compatible with 1.0.

  Fixed bug preventing Fields.ALL selector in c.p.Every when incoming positions are used instead of field names
  and the given aggregator declares field names.

  Fixed bug that prevented the configured codecs from loading for co-group spills.

  Fixed bug where c.s.TextDelimited would fail on delimiters that are also regex special characters.

  Fixed random j.u.ConcurrentModificationException error when running in Hadoop local mode by synchronizing
  the c.f.s.StackElement#closeTraps method.

  Fixed missing property values when stored in a nested j.u.Properties object.

  Fixed NPE when counter group does not exist yet when querying c.s.FlowStats#getCounterValue.

1.1.1

  Fixed bug where some unsafe operations followed by named c.p.Pipe instances were not considered during planning.

  Removed imports for SLF4J and replaced with Apache LOG4j in c.s.TextDelimited.

  Fixed bug where c.t.Fields.SWAP did not properly resolve when following a c.p.Every pipe.

1.1.0
