@@ -1098,7 +1098,7 @@ public class BuildJobsTest extends CascadingTestCase
    *
    * @throws Exception
    */
-  public void testSplitOnGroup() throws Exception
+  public void testSplitEachOnGroup() throws Exception
     {
     Tap sourceLower = new Hfs( new TextLine( new Fields( "num", "char" ) ), "foo" );
 
@@ -1126,7 +1126,7 @@ public class BuildJobsTest extends CascadingTestCase
       {
       flow = new FlowConnector().connect( sources, sinks, Pipe.pipes( left, right ) );
       }
-    catch( FlowException exception )
+    catch( PlannerException exception )
       {
 //      exception.writeDOT( "splitout.dot" );
       throw exception;
@@ -1139,7 +1139,43 @@ public class BuildJobsTest extends CascadingTestCase
     assertEquals( "not equal: steps.size()", 3, steps.size() );
     }
 
-  public void testSplitOuput() throws Exception
+  public void testSplitEveryOnGroup() throws Exception
+    {
+    Tap sourceLower = new Hfs( new TextLine( new Fields( "num", "char" ) ), "foo" );
+
+    Map sources = new HashMap();
+
+    sources.put( "lower1", sourceLower );
+
+    // using null pos so all fields are written
+    Tap sink1 = new Hfs( new TextLine(), "output1", true );
+    Tap sink2 = new Hfs( new TextLine(), "output2", true );
+
+    Map sinks = new HashMap();
+
+    sinks.put( "output1", sink1 );
+    sinks.put( "output2", sink2 );
+
+    Pipe pipeLower1 = new Pipe( "lower1" );
+
+    Pipe pipe = new GroupBy( pipeLower1, new Fields( 0 ) );
+    Pipe left = new Every( new Pipe( "output1", pipe ), new TestBuffer( new Fields( "left" ), true ) );
+    Pipe right = new Every( new Pipe( "output2", pipe ), new TestBuffer( new Fields( "right" ), true ) );
+
+    Flow flow = null;
+    try
+      {
+      flow = new FlowConnector().connect( sources, sinks, Pipe.pipes( left, right ) );
+      fail( "did not throw planner exception" );
+      }
+    catch( PlannerException exception )
+      {
+//      exception.writeDOT( "splitout.dot" );
+//      exception.printStackTrace(  );
+      }
+    }
+
+  public void testSplitOutput() throws Exception
     {
     Tap sourceLower = new Hfs( new TextLine( new Fields( "num", "char" ) ), "foo" );
 
